--- a/src/static/public/css/index.css
+++ b/src/static/public/css/index.css
@@ -76,3 +76,34 @@ header {
     background-color: #ffd0005e;
     color: white;
 }
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #353535da;
+    z-index: 10;
+}
+
+.close-btn {
+    font-size: 7vh;
+    cursor: pointer;
+    position: absolute;
+    line-height: 7vh;
+    height: 7vh;
+    top: 2vh;
+    right: 2vh;
+    color: #a8b8b6;
+}
+
+.close-btn:hover {
+    color: #ddcdcb;
+}
+
+.overlay-content {
+    max-width: 450px;
+    margin-top: 10vh;
+    font-family: Shabnam;
+}
