--- a/src/templates/public/index.html
+++ b/src/templates/public/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <div id='app' class='container-fluid m-0 p-0'>
-        <authentication :host='host' :auth-token='authToken'></authentication>
+        <authentication></authentication>
         <header class='text-center p-3'>
             <span> کوتاه نشانی اینترنتی گستر ایران زمین </span>
             <span> (شعبه۲) </span>
